<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_sp"
    tools:context=".CreateActivity">


    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/heading1_style" />

    <ImageView
        android:id="@+id/avatar2"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/small_sp"
        android:contentDescription="@string/avatar"
        app:srcCompat="@drawable/pfp"
        tools:srcCompat="@drawable/pfp" />

    <TextView
        android:id="@+id/target_name"
        style="@style/heading2_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:visibility="gone" />

    <TextView
        android:id="@+id/target_designation"
        style="@style/heading3_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_sp"
        android:text="@string/android_developer"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_your_full_name"
            android:inputType="text|textPersonName" />

        <Button
            android:id="@+id/name_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/design_edit"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_your_designation"
            android:inputType="text|textPersonName" />

        <Button
            android:id="@+id/design_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter" />
    </LinearLayout>


</LinearLayout>